# dedup_server_ref

./: .gitignore  CMakeLists.txt  CONFIGURATION.md  CONFIGURATION_OBSERVABILITY.md  CONFIGURATION_OBSERVABILITY_STATUS.md  DATABASE_CLEANUP.md  DATABASE_HASH_FUNCTIONALITY.md  DUPLICATE_LINKER_OPTIMIZATION.md  KILL_SCRIPTS_README.md  MOUNT_AWARE_SOLUTION.md  PROJECT_STRUCTURE.md  RAW_FILE_SUPPORT.md  README.md  SMART_CACHE_CLEANUP.md  STARTUP_SCAN_FUNCTIONALITY.md  build.sh  clean_db.sh  clear_database.sh  clear_database_advanced.sh  config.json  config.json.backup  config.json.example  config.yaml  dbreset.sh  debug_config.cpp  kill_server.sh  rebuild.sh  run.sh  scan_results.db  scan_results.db-shm  scan_results.db-wal  test_config_observability.sh  test_config_real_time.sh  test_libraw_formats.cpp  test_mode_change.cpp  test_mount_manager.cpp  test_quality_stack.sh  test_raw_support.sh  test_scan_config_observer  test_server_config.json  (+1 more)
config/: README_CONFIG_PERSISTENCE.md  config.json
config/examples/: config_persistence_example.cpp
config/include/: poco_config_adapter.hpp  poco_config_manager.hpp  server_config.hpp
config/src/: poco_config_adapter.cpp  poco_config_manager.cpp
config/tests/: debug_config.cpp  file_type_config_test.cpp  poco_config_adapter_test.cpp  poco_config_manager_test.cpp  test_config_persistence.cpp
docs/: configuration_endpoints.md
examples/: cache_size_test.cpp  debug_config.cpp  file_processor_example.cpp  file_type_config_test.cpp  file_utils_example.cpp  libraw_probe.cpp  media_processor_example.cpp  raw_to_jpeg.cpp
include/: auth_middleware.hpp  logger.hpp  openapi_docs.hpp  route_handlers.hpp  server_config.hpp  status.hpp
include/auth/: auth.hpp  auth_middleware.hpp
include/core/: cache_config_observer.hpp  config_observer.hpp  continuous_processing_manager.hpp  crash_recovery.hpp  database_access_queue.hpp  database_config_observer.hpp  database_connection_pool.hpp  database_manager.hpp  database_write_queue.hpp  dedup_mode_config_observer.hpp  dedup_modes.hpp  duplicate_linker.hpp  error_recovery.hpp  external_library_wrappers.hpp  file_processor.hpp  file_scanner.hpp  file_type_config_observer.hpp  file_utils.hpp  http_server_manager.hpp  logger_observer.hpp  media_processing_orchestrator.hpp  media_processor.hpp  memory_pool.hpp  mount_manager.hpp  poco_config_adapter.hpp  poco_config_manager.hpp  processing_config_observer.hpp  processing_result.hpp  resource_monitor.hpp  scan_config_observer.hpp  scan_scheduler.hpp  scan_thread_pool_manager.hpp  server_config_manager.hpp  server_config_observer.hpp  shutdown_manager.hpp  simple_scheduler.hpp  singleton_manager.hpp  thread_pool_manager.hpp  threading_config_observer.hpp  transcoding_manager.hpp  (+1 more)
include/core/cache/: decoder_cache.hpp
include/core/decoder/: media_decoder.hpp
include/database/: database_access_queue.hpp  database_manager.hpp  db_performance_logger.hpp  sql_scripts.hpp
include/logging/: logger.hpp
include/web/: openapi_docs.hpp  route_handlers.hpp
src/: auth.cpp  cache_config_observer.cpp  database_access_queue.cpp  database_manager.cpp  database_write_queue.cpp  dedup_mode_config_observer.cpp  duplicate_linker.cpp  file_processor.cpp  file_scanner.cpp  file_utils.cpp  main.cpp  media_processing_orchestrator.cpp  media_processor.cpp  mount_manager.cpp  poco_config_adapter.cpp  poco_config_manager.cpp  processing_config_observer.cpp  scan_scheduler.cpp  server_config_manager.cpp  simple_scheduler.cpp  singleton_manager.cpp  status.cpp  thread_pool_manager.cpp  transcoding_manager.cpp
src/cache/: decoder_cache.cpp
src/core/: continuous_processing_manager.cpp  database_config_observer.cpp  database_connection_pool.cpp  file_type_config_observer.cpp  http_server_manager.cpp  logger_observer.cpp  memory_pool.cpp  scan_config_observer.cpp  scan_thread_pool_manager.cpp  server_config_observer.cpp  shutdown_manager.cpp  singleton_manager.cpp  threading_config_observer.cpp  video_processing_config_observer.cpp
src/database/: database_access_queue.cpp  database_manager.cpp  db_performance_logger.cpp
src/database/scripts/: README.md  cache_map_operations.sql  create_indexes.sql  create_tables.sql  create_triggers.sql  flags_and_user_inputs_operations.sql  init_database.sql  media_processing_operations.sql  scanned_files_operations.sql  statistics_and_reporting.sql
src/decoder/: media_decoder.cpp
tests/: CMakeLists.txt  README.md  auth_test.cpp  database_manager_test.cpp  file_processor_test.cpp  file_utils_test.cpp  max_decoder_threads_observability_test.cpp  media_processing_orchestrator_test.cpp  media_processor_test.cpp  poco_config_adapter_test.cpp  poco_config_manager_test.cpp  processing_interval_observability_test.cpp  shutdown_manager_test.cpp  status_test.cpp  test_base.hpp  test_config_endpoints.cpp  test_config_real_time.sh  test_database_connection_pool.cpp  test_env_setup.cpp  test_new_config_observers.cpp  test_scan_config_observer_simple.cpp  test_server_config_observer.cpp  test_server_config_observer_simple.cpp
tests/integration/: debug_config.cpp  file_processor_example.cpp  file_type_config_test.cpp  media_processor_example.cpp  migrate_to_relative_paths.cpp  raw_file_test.cpp  smart_cache_cleanup_test.cpp  test_arw_detection.cpp  test_libraw_raf.cpp  test_mode_change  test_mode_change.cpp
tests/scripts/: run_all_tests.sh  run_integration_tests.sh  run_tests.sh  run_unit_tests.sh  test_database_hash.sh  test_duplicate_linker_optimization.sh  test_hash_changes.sh  test_hash_storage_timing.sh  test_scan.sh  test_startup_scan.sh
tests/stubs/: http_server_manager_stub.cpp
